Se adiciona activity para listar los conductores disponibles, se reemplaza archivos anteriores con el proyecto base de mi pc personal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="conductores">Conductores</string>
     <string name="pedidos">Pedidos</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
