Se agrego funcionalidad swipe para cerrar fragment DriverCome y DriverProfile.
Se agrega pantalla de configuración de perfil de usuario.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,11 @@
     <string name="wait_time">Tiempo de espera:</string>
     <string name="come_for_me">Ven por mí</string>
     <string name="distance">Distancia:</string>
+    <string name="name_user">nombre</string>
+    <string name="last_name_user">apellido</string>
+    <string name="movil_user">MÓVIL</string>
+    <string name="my_locations">MÍS UBICACIONES</string>
+    <string name="home">casa</string>
+    <string name="office">oficina</string>
 
 </resources>
