Modificaciones en ventanas de dialogos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,10 +55,11 @@
     <string name="sign_off">Cerrar sesión</string>
     <string name="vehicle">VEHICULO</string>
     <string name="vehicle_model">model</string>
-    <string name="docos_free_question">¿DOCOS gratis?</string>
+    <string name="docos_promotions_question">¿DOCOS gratis?</string>
     <string name="invite_your_friends">Invita a tus amigos</string>
-    <string name="docos_promotions">Ingresa el código que te  acredita como conductor DOCO.</string>
+    <string name="docos_is_driver_question">Ingresa el código que te  acredita como conductor DOCO.</string>
     <string name="insert_code_doco_free">Ingresa código de invitación</string>
     <string name="insert_driver_code">Ingresa código</string>
+    <string name="enter">Ingresar</string>
 
 </resources>
