Autor: Edwin Fernando Muñoz Delgado Fecha: 22/12/2016 Descripción: Login y registro de usuario con firebase - google sign

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,7 @@
     <string name="err_msg_login">El campo email no es valido</string>
     <string name="err_msg_password">El campo contraseña no puede ser vacío</string>
     <string name="err_msg_login_no_empty">El campo email no puede ser vacío</string>
+    <string name="msg_sign_off">Desea cerrar sesión?</string>
+    <string name="msg_delete_account">Desea eliminar cuenta?</string>
 
 </resources>
